test/success/option2/main.sk
module Main {

fn main() {
    match Some(True) {
         Some(a) -> (),
         None -> assert(False),
    };
}

}