test/errors/matchcompile/match_missing_pattern/main.sk
module Main {

fn main() {
    match True {
        True -> (),
    };
}

}

